<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="MainMenu">Practical Parent</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ChildrenActivityName">Configure My Children</string>
    <string name="DeleteButton">Delete</string>
    <string name="EditButton">Edit</string>
    <string name="AddChild">Add Child</string>

    <string name="EnterChildName">Enter Child Name…</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="EditChildName">Edit Child Name</string>
    <string name="title_activity_flip_coin">Flip a Coin</string>
    <string name="flipcoin">FlipCoin</string>
    <string name="history">History</string>
    <string name="flip">Flip</string>
    <string name="coin_image">Coin image</string>
    <string name="image_of_a_coin">Image of a coin</string>
    <string name="head1">Head</string>
    <string name="tail1">Tail</string>
    <string name="head">Head</string>
    <string name="tail">Tail</string>
    <string name="title_activity_flip_coin_history">History</string>
    <string name="children_name_abc">children_name_abc</string>
    <string name="current_date_11_22_1111">current_date_11_22_1111</string>
    <string name="result">result</string>
    <string name="all">All</string>
    <string name="current">Current</string>

    <string name="TimeoutTimer">Timeout Timer</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>

    <string-array name="MenuNames">
        <item>Flip a Coin</item>
        <item>Timeout Timer</item>
        <item>Configure my Children</item>
        <item>Whose Turn Is It</item>
        <item>Take A Breath</item>
        <item>Help</item>
    </string-array>

    <string name="OneMinute">1 Minute</string>
    <string name="TwoMinutes">2 Minutes</string>
    <string name="ThreeMinutes">3 Minutes</string>
    <string name="FiveMinutes">5 Minutes</string>
    <string name="TenMinutes">10 Minutes</string>
    <string name="Minutes">Minutes</string>
    <string name="TimesUp">00:00</string>
    <string name="Set">Set</string>
    <string name="Reset">Reset</string>

    <string name="HelpPage">Help Page</string>
    <string name="WhoseTurn1">Whose Turn Is It</string>
    <string name="change_profile">CHANGE PROFILE</string>
    <string name="save_child">Save Child</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="add_child">Add Child</string>
    <string name="edit_child">Edit Child</string>
    <string name="default_profile_image">default profile image</string>
    <string name="ok1">OK</string>
    <string name="camera">Camera</string>
    <string name="WhoseTurn">Whose Turn Is It</string>s
    <string name="AddTask">Add Task</string>
    <string name="Save">Save</string>
    <string name="InputTaskName">Input Task Name</string>
    <string name="InputTaskDesc">Input Task Description</string>
    <string name="MadeBy">Made by: Team Umber</string>
    <string name="Sources">Resource Sources</string>
    <string name="BGSource"><a href="https://wonderfulengineering.com/download-66-white-wallpaper-for-desktop-and-mobile/">Timer Background Image Source Link</a></string>
    <string name="NotifSource"><a href="https://www.flaticon.com/free-icon/notification_1040216?term=notification&amp;page=1&amp;position=16">Timer Notification Icon Source Link</a></string>
    <string name="CodeStyleSource"><a href="https://google.github.io/styleguide/javaguide.html">Code Style Guide Source</a></string>
    <string name="CancelTask">Task Removed</string>
    <string name="FinishTask">%1$s Finished Task</string>
    <string name="UpdateTask">Next Child is %2$s</string>
    <string name="CurrentIndex">Current index is %d</string>
    <string name="TaskNameAttention">Please enter the name of the task!</string>
    <string name="AddTaskSuccess">Added Task Successfully</string>
    <string name="EditTaskSuccess">Edited Task Successfully</string>
    <string name="EditTaskName">Edit Task Name</string>
    <string name="EditTaskDesc">Edit Task Description</string>
    <string name="TaskNameIs">Task: %s</string>
    <string name="ChildNameIs">Child: %s</string>
    <string name="NoDesc">No Description</string>
    <string name="EditTask">Edit Task</string>
    <string name="NobodysTurn">Nobody\'s Turn</string>
    <string name="CurrentChildIs"> The current child is: %s</string>
    <string name="NoChild">No Child</string>
    <string name="x">x</string>
    <string name="name">Name</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="TaskFinished">Task Finished?</string>
    <string name="yes">Yes</string>
    <string name="delete_task">Delete task?</string>
    <string name="ChildImage">Child\'s Image</string>
    <string name="change_default">Change Default</string>
    <string name="child">Child</string>
    <string name="nobody">Nobody</string>
    <string name="image">Image</string>
    <string name="ChangingChild">Changing Child</string>
    <string name="TakeBreath">Take Breath</string>
    <string name="begin">Begin</string>
    <string name="number_of_breaths">Let\'s take</string>
    <string name="in">In</string>
    <string name="out">out</string>
    <string name="inhaleText">TAKE \n A \n DEEP BREATH \n IN</string>
    <string name="exhaleText">TAKE \nA \nDEEP \nBREATH \nOUT</string>
    <string name="remaining_breaths_txt">Remaining breaths:</string>
    <string name="remaining_breaths_number">0</string>
    <string name="breath_in_help_msg">Hold button and breath in</string>
    <string-array name="NumberOfBreathSpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string name="child_profile_image">Child\'s Profile Image</string>
    <string name="twentyfive_percent">25%</string>
    <string name="fifty_percent">50%</string>
    <string name="seventyfive_percent">75%</string>
    <string name="hundred_percent">100%</string>
    <string name="twohundred_percent">200%</string>
    <string name="threehundred_percent">300%</string>
    <string name="fourhundred_percent">400%</string>
    <string name="current_time_speed">Time @%s</string>
    <string name="timerInstruction">Indigo part means the past time. Crimson part means the remaining time.</string>
    <string name="timerInputEmpty">Field cannot be empty</string>
    <string name="timerInputNoPositive">Please enter a positive number</string>
    <string name="timerWithHours">%d:%02d:%02d</string>
    <string name="timerWithoutHours">%02d:%02d</string>
    <string name="breath_together">breath together</string>


</resources>