<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/item_Win"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/item_ChildrenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/item_Win"
        android:text="@string/children_name_abc"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/item_CurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_Win"
        android:text="@string/current_date_11_22_1111"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/item_ResultOfHeadOrTail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/item_Win"
        android:text="@string/result"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>