<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <Button
        android:id="@+id/pop_btn_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="#FFFFFF"
        android:text="@string/x"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/button_clicked" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/pop_tv_child_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/ChildImage" />
        <TextView
            android:id="@+id/pop_tv_child_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/pop_tv_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="#eaad43"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/pop_tv_task_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:background="#45bc62"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/pop_tv_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TaskFinished"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/pop_btn_confirm"
                android:layout_width="60dp"
                android:layout_height="28dp"
                android:text="@string/yes"
                android:background="@drawable/button_clicked"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:background="#49acd5"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/pop_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_task"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/pop_btn_cancel"
                android:layout_width="60dp"
                android:layout_height="28dp"
                android:text="@string/yes"
                android:background="@drawable/button_clicked"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
